--- a/project-one/css/main.css
+++ b/project-one/css/main.css
@@ -32,10 +32,11 @@ main {
 
 }
 
-#s1, #s2, #s3 {
+#slot1, #slot2, #slot3 {
     display: flex;
     justify-content: center;
     align-items: baseline;
+    flex-direction: row;
     height: 100px;
     width: 100px;
     background-size: contain;
