--- a/project-one/css/main.css
+++ b/project-one/css/main.css
@@ -2,23 +2,39 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+body{
+    background-color: #f8f8f2;
+}
 
-body {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+h1 {
+    color: #5C494D;
+    background-color: #DBA55E;
+    padding: 20px;
+    text-align: center;
+}
+
+main {
+    height: 90vh;
+    display: grid;
+    grid-template-columns: 150px auto 150px;
+    grid-template-rows: 20% auto 20%;
     justify-content: center;
     align-items: center;
 }
 
-main {
-    display: flex;
+#score-board {
+    display: block;
     justify-content: center;
+    align-items: center;
+    background-color: #9e9898;
+    border: 3px solid #b35950;
+    color: #f8f8f2;
 }
 
 #game-board {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    flex-direction: row;
     align-items:center;
     height: 600px;
     width: 600px;
@@ -26,15 +42,35 @@ main {
 
 #slot-machine {
     display: flex;
-    justify-content: center;
-    height: 500px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 300px;
     width: 500px;
 
 }
 
+#buttons {
+    margin-top: 75px;
+}
+
+#startHere, #playBtn, #stopBtn {
+    background-color: #9e9898;
+    border: 3px solid #DBA55E;
+    font-size: 20px;
+    padding: 20px 10px;
+    width: 200px;
+    margin: 0 0 10px 0
+}
+
+#startHere:hover, #playBtn:hover, #stopBtn:hover {
+    border: 3px solid #b35950;
+}
+
 #slot1, #slot2, #slot3 {
-    display: flex;
-    justify-content: center;
+    margin: 0, 100px;
+    display: inline-flex;
+    justify-content: space-evenly;
+    flex-direction: row;
     align-items: baseline;
     flex-direction: row;
     height: 100px;
