changes landing page card image size to normal from small

--- a/project-two/views/index.ejs
+++ b/project-two/views/index.ejs
@@ -16,7 +16,7 @@
       <% if (cardData) { %> 
         <%= cardData.name %>
         <br />
-        <img src="<%= cardData.image_uris.small %>" alt="<%= cardData.name %>">
+        <img src="<%= cardData.image_uris.normal %>" alt="<%= cardData.name %>">
       <% } else { %>
         <h3>search a card</h3>
       <% } %>
