adds index function to GET index page

--- a/project-two/views/partials/header.ejs
+++ b/project-two/views/partials/header.ejs
@@ -11,5 +11,6 @@
     <main>
         <nav>
             <a href="/decks/new">Add a Deck</a>
+            <a href="/decks/index">All Decks</a>
             <a href="/index">Home</a>
         </nav>
