begins to build out the new/edit deck view

--- a/project-two/views/index.ejs
+++ b/project-two/views/index.ejs
@@ -8,8 +8,8 @@
     <h1>Home Page</h1>
     <div>
       <form action="/" method="GET">
-      <input type="text" name="cardname" placeholder="Search a Card">
-      <button type="submit">Search</button>
+      <!-- <input type="text" name="cardname" placeholder="Search a Card"> -->
+      <button type="submit">Find new Card</button>
       </form>
     </div>
     <div class="display">
@@ -18,7 +18,7 @@
         <br />
         <img src="<%= cardData.image_uris.normal %>" alt="<%= cardData.name %>">
       <% } else { %>
-        <h3>search a card</h3>
+        <h3>get inspiration</h3>
       <% } %>
 
 
