--- a/project-two/views/partials/header.ejs
+++ b/project-two/views/partials/header.ejs
@@ -10,7 +10,7 @@
 <body>
     <main>
         <nav>
-            <a href="/index">Home</a>
+            <a href="/">Home</a>
             <a href="/decks/new">Add a Deck</a>
             <a href="/decks/index">All Decks</a>
         </nav>
