--- a/project-two/views/index.ejs
+++ b/project-two/views/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Landing Page</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<%- include('partials/header') %>
     <h1>Home Page</h1>
     <div>
       <form action="/" method="GET">
@@ -23,5 +17,4 @@
 
 
     </div>
-  </body>
-</html>
+<%- include('partials/footer') %>
