applies minor debugs

--- a/project-two/views/decks/new.ejs
+++ b/project-two/views/decks/new.ejs
@@ -1,9 +1,9 @@
 <%- include('../partials/header') %> 
 <h1>Build a New Deck</h1>
 <div>
-    <form action="/decks/new" method="GET">
+    <form action="/new" method="GET">
         <input type="text" name="cardname" placeholder="Search a Card">
-        <button type="search">Search</button>
+        <button type="submit">Search</button>
     </form>
 </div>
 <div class="cardSearch">
