--- a/project-two/views/decks/new.ejs
+++ b/project-two/views/decks/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %> 
 <h1>Build a New Deck</h1>
 <div>
-    <form action="/decks/new" method="POST">
+    <form action="/cards/new" method="POST">
         <input type="text" name="card" placeholder="Search a Card">
         <button type="submit">Search</button>
     </form>
