--- a/project-two/views/decks/new.ejs
+++ b/project-two/views/decks/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %> 
 <h1>Build a New Deck</h1>
 <div>
-    <form action="/cards/new" method="POST">
+    <form action="/cards/find" method="POST">
         <input type="text" name="card" placeholder="Search a Card">
         <button type="submit">Search</button>
     </form>
@@ -11,7 +11,11 @@
         <%= cardSearch.name %>
         <br />
         <img src="<%= cardSearch.image_uris.small %>" alt="<%= cardSearch.name %>">
-        <button type="submit" name="AddNewCard">Add to Deck</button>
+        <form action="/cards/new" method="POST">
+            <input type="hidden" name="name" value="<%= cardSearch.name %>">
+            <input type="hidden" name="image_uri" value="<%= cardSearch.image_uris.small %>">
+            <button type="submit">Add to Deck</button>
+        </form>
     <% } else { %>
         <h3>search a card</h3>
     <% } %>
