--- a/project-two/views/decks/new.ejs
+++ b/project-two/views/decks/new.ejs
@@ -21,7 +21,7 @@
     <% } %>
 </div>
 <div class="cardDeck">
-    <form action="/decks/:id" method="POST">
+    <form action="/decks" method="POST">
         <input type="text" name="deckName" placeholder="Deck Name" required>
         <input type="text" name="deckAuthor" placeholder="Author" required>
         <input type="submit" value="Add New Deck">
