--- a/project-two/views/decks/show.ejs
+++ b/project-two/views/decks/show.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
-<h1>Build your deck</h1>
+<h1>Your deck</h1>
 <div>
-  <form action="/cards/find" method="POST">
+  <form action="/decks/<%=deck.id%>/find" method="POST">
     <input type="text" name="card" placeholder="Search a Card" />
     <button type="submit">Search</button>
   </form>
@@ -25,7 +25,7 @@
 </div>
 <div class="cardDeck">
   <h3><%= deck.deckName %></h3>
-  <% if deck.length > 0 { %>
+  <% if (deck.cards.length > 0) { %>
   <table>
     <% deck.cards.forEach(function(c) { %>
     <thead>
@@ -43,7 +43,7 @@
   <% } else { %>
   <h5>No Cards Yet</h5>
   <% } %>
-  <form action="/decks/<%=_id%>?_method=UPDATE" method="POST">
+  <form action="/decks/<%=deck.id%>?_method=UPDATE" method="POST">
     <input type="text" name="deckName" placeholder="Deck Name" required />
     <input type="text" name="deckAuthor" placeholder="Author" required />
     <input type="submit" value="Save Changes" />
