fixes addToDeck function, current issue with displaying data after card is added to deck

--- a/project-two/views/decks/show.ejs
+++ b/project-two/views/decks/show.ejs
@@ -1,28 +1,6 @@
 <%- include('../partials/header') %>
 <h1>Your deck</h1>
-<div>
-  <form action="/decks/<%=deck.id%>" method="POST">
-    <input type="text" name="card" placeholder="Search a Card" />
-    <button type="submit">Search</button>
-  </form>
-</div>
-<div class="search">
-  <% if (cardSearch) { %> <%= cardSearch.name %>
-  <br />
-  <img src="<%= cardSearch.image_uris.small %>" alt="<%= cardSearch.name %>" />
-  <form action="/cards/new" method="POST">
-    <input type="hidden" name="name" value="<%= cardSearch.name %>" />
-    <input
-      type="hidden"
-      name="image_uri"
-      value="<%= cardSearch.image_uris.small %>"
-    />
-    <button type="submit">Add to Deck</button>
-  </form>
-  <% } else { %>
-  <h3>search a card</h3>
-  <% } %>
-</div>
+
 <div class="cardDeck">
   <h3><%= deck.deckName %></h3>
   <% if (deck.cards.length > 0) { %>
@@ -35,7 +13,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><img src="<%= c.image_uris.small %>" alt="<%=c.name %>" /></td>
+        <td><img src="<%= c.image_uris %>" alt="<%=c.name %>" /></td>
       </tr>
     </tbody>
     <% }); %>
@@ -43,6 +21,14 @@
   <% } else { %>
   <h5>No Cards Yet</h5>
   <% } %>
+  <form action="/decks/<%= deck._id %>/cards" method="POST">
+    <select name="cardId">
+      <%- cards.map(c =>
+      `<option value="${c._id}">${c.name}</option>
+      `).join('') %> 
+    </select>
+    <button type="submit">Add to Deck</button>
+  </form>
   <form action="/decks/<%= deck._id %>?_method=UPDATE" method="POST">
     <input type="text" name="deckName" placeholder="Deck Name" required />
     <input type="text" name="deckAuthor" placeholder="Author" required />
