--- a/project-two/views/partials/header.ejs
+++ b/project-two/views/partials/header.ejs
@@ -17,4 +17,5 @@
                 <button type="submit">Add a Deck</button>
             </form>
             <a href="/decks">All Decks</a>
+            <a href="/cards/search">Search Cards</a>
         </nav>
