cleans up uneeded code

--- a/project-two/views/decks/show.ejs
+++ b/project-two/views/decks/show.ejs
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><img src="<%= c.image_uris %>" alt="<%=c.name %>" /></td>
+        <td><img src="<%= c.image_uri %>" alt="<%=c.name %>" /></td>
       </tr>
     </tbody>
     <% }); %>
